[package]
authors = ["Weiyuan Wu <weiyuan@crows.land>"]
categories = ["command-line-utilities", "development-tools"]
description = "A CLI tool for converting Solana private key from/to base58 to/from json"
edition = "2021"
license = "MIT"
name = "solana-base58-json-converter"
repository = "https://github.com/dovahcrow/solana-base58-json-converter"
version = "0.2.1"

[dependencies]
anyhow = "1.0.98"
bs58 = "0.5.1"
fehler = "1.0.0"
serde_json = "1.0.140"
shellexpand = "3.1.1"
solana-sdk = "2.3.1"
clap = { version = "4.5.40", features = ["derive", "env"] }


[[bin]]
name = "sol-addr-convert"
path = "src/main.rs"
